# actions-job-parser

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: codestyle.yml
src/actions_job_parser/: __init__.py  actions_job_parser.py
